# fastcdp

./: CHANGELOG.md  README.md  core.html  core.html.md  ext.html  ext.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  setup.html  setup.html.md  sitemap.xml
fastcdp/: __init__.py  _modidx.py  core.py  ext.py  setup.py  skill.py
fastcdp/icons/: cdp-chrome.icns
index_files/figure-commonmark/: 65d1f5d3-1-5d9f96ff-4344-43ee-bb5d-00d465cf1f79
nbs/: 00_core.ipynb  01_ext.ipynb  02_setup.ipynb  index.ipynb
